test_programs/compile_failure/noirc_frontend_tests_bool_generic_as_loop_bound/src/main.nr

    pub fn read<let N: bool>() {
        let mut fields = [0; N];
        for i in 0..N { 
            fields[i] = i + 1;
        }
        assert(fields[0] == 1);
    }
    